Prevent vote metadata overflowing.
Closes #114. Thanks @Tomo-san!

--- a/nkdsu/static/less/_track.less
+++ b/nkdsu/static/less/_track.less
@@ -148,10 +148,12 @@
                 }
 
                 .meta {
-                  padding-right: 55px;
+                  margin-right: 55px;
                   color: #666;
                   font-size: .8em;
                   white-space: nowrap;
+                  overflow: hidden;
+                  text-overflow: ellipsis;
 
                   &.full_name {
                     font-weight: bold;
